<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyFragment">
    //TODO: Fix layout so it stretches properly when dealing with large amounts of text or screen sizes

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_company_title"
            android:id="@+id/naamText"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignEnd="@+id/textView3"
            android:layout_marginTop="158dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_company_history"
            android:id="@+id/historyText"
            android:layout_marginTop="17dp"
            android:layout_below="@+id/naamText"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_company_website"
            android:id="@+id/textView3"
            android:layout_below="@+id/historyText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="350dp"/>


    </RelativeLayout>

</FrameLayout>
